# langchain-practice

./: .gitignore  README.md  main.py  pyproject.toml
Tema3/: document_loaders.py  vector_stores.py
Tema3/asistente_legal_RAG.py/: README.md  _make_sample_pdfs.py  app.py  config.py  ingest.py  prompt.py  rag_system.py
curso_langchain/: analisis_setimientos.py  ejemplo_runnbles.py  practica.py  streamlit_chatbot.py
cv_analyzer/: app.py
cv_analyzer/models/: cv_model.py
cv_analyzer/services/: cv_evaluator.py  pdf_processor.py
cv_analyzer/ui/: streamlit_ui.py  streamlit_ui.py.tmp.8492.1779103306483  streamlit_ui.py.tmp.8492.1779103561414
