[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "chromadb>=1.5.9",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "isort>=8.0.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-google-community>=4.0.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
 